--- a/expensesweb/templates/expenses/add_expense.html
+++ b/expensesweb/templates/expenses/add_expense.html
@@ -1,3 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
-<h1>Add Expense</h1>
+
+<h1>Add Expense</h1> 
+
+{% endblock %}
