--- a/expensesweb/templates/expenses/index.html
+++ b/expensesweb/templates/expenses/index.html
@@ -1,15 +1,25 @@
 {% extends 'base.html' %}
+{%load static %}
 
-<h1>Expenses List</h1>
+<div class="container">
 
-<ul class="list-group">
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-    <li class="list-group-item"> LALALA</li>
-</ul>
+    {% block content %}
+
+    {% include 'partials/_messages.html' %}
+
+
+    <h1>Expenses List</h1>
+
+    <ul class="list-group">
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+        <li class="list-group-item"> LALALA</li>
+    </ul>
+    {% endblock %}
+</div>
