--- a/expensesweb/templates/partials/_sidebar.html
+++ b/expensesweb/templates/partials/_sidebar.html
@@ -9,7 +9,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="{% url 'expenses' %}">
             Expenses
           </a>
         </li>
@@ -37,5 +37,22 @@
           </a>
         </li>
       </ul>
+      <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"></h6>
+      <span>Settings</span>
+      <a class="link-secondary" href="#" aria-label="Add a new report">
+      </a>
+      </h6>
+    <ul class="nav flex-column mb-2">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'settings' %}">
+          General
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">
+          Account
+        </a>
+      </li>
+    </ul>
     </div>
   </nav>
