--- a/expensesweb/templates/partials/_sidebar.html
+++ b/expensesweb/templates/partials/_sidebar.html
@@ -14,8 +14,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            Incomes
+          <a class="nav-link" href="{% url 'income' %}">
+            Income
           </a>
         </li>
       </ul>
