--- a/expensesweb/templates/partials/_sidebar.html
+++ b/expensesweb/templates/partials/_sidebar.html
@@ -27,12 +27,12 @@
       </h6>
       <ul class="nav flex-column mb-2">
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="{% url 'status' %}">
             Expenses Summary
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="{% url 'income_status' %}">
             Incomes Summary
           </a>
         </li>
