--- a/expensesweb/templates/base.html
+++ b/expensesweb/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
     <link rel="stylesheet" href="{% static 'css/main.css' %}" >
     <link href="{% static 'css/dashboard.css' %}" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
     </head>
     <body>
       
@@ -51,12 +52,10 @@
       <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
         <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
        
         <script src="{% static 'jquery-3.6.0.min.js' %}"></script>
         <script src="{% static 'js/dashboard.js' %}"></script>
-        
-        
+       
     </body>
   </html>
   
